update the code with iphone or ipad config and top-bar flicker issue fixed

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -225,3 +225,11 @@ drawer{
   height: 100%;
 }
 /* End ionic drawer */
+
+
+/* When the top bar flicker use this css for on the header */
+
+.nav-bar-block{
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
+}
